# mouni

./: .dockerignore  Dockerfile  README.md  docker-build-local.sh  docker-entrypoint.sh  docker-run-local.sh
backend/: .gitignore  .openapi-generator-ignore  Makefile  README.md  debug_cli.py  pyproject.toml  requirements.txt  requirements_dev.txt  swagger.yaml
backend/src/api_server/: main.py  security_api.py  wrapped_main.py
backend/src/api_server/apis/: activities_api.py  activities_api_base.py  expenses_api.py  expenses_api_base.py  groups_api.py  groups_api_base.py  members_api.py  members_api_base.py  settlements_api.py  settlements_api_base.py
backend/src/api_server/impl/: dependencies.py  errors.py  utils.py
backend/src/api_server/impl/handlers/: activity_handler.py  expense_handler.py  group_handler.py  member_handler.py  settlement_handler.py
backend/src/api_server/impl/infra/: db.py
backend/src/api_server/impl/middlewares/: auth.py
backend/src/api_server/impl/persistence/: __init__.py  activity_repository.py  expense_involved_repository.py  expense_repository.py  group_repository.py  member_repository.py  settlement_repository.py
backend/src/api_server/impl/persistence/migrations/: 001_create_groups.sql  002_create_members.sql  003_create_activity.sql  004_create_expense_involved.sql  005_create_expenses.sql  006_create_settlements.sql
backend/src/api_server/impl/services/: activity_service.py  expense_service.py  group_service.py  member_service.py  settlement_service.py
backend/src/api_server/models/: activity.py  activity_create.py  activity_update.py  expense.py  expense_create.py  expense_involved.py  expense_update.py  group.py  group_create.py  group_update.py  groups_group_id_activities_activity_id_settlements_settlement_id_patch_request.py  groups_group_id_activities_activity_id_status_get200_response.py  member.py  member_create.py  member_update.py  settlement.py  settlement_create.py  settlement_update.py
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/api/: api_client.dart  api_result.dart
frontend/lib/env/: env.dart
frontend/lib/misc/: colors.dart  textstyle.dart
frontend/lib/models/: activity.dart  dates.dart  expense.dart  expense_involved.dart  (+3 more)
frontend/test/: widget_test.dart
frontend/web/: config.json  index.html  manifest.json
(+25 files in other folders)
