[project]
name = "mouni-backend"
version = "0.1.0"
description = "Mouni backend API"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "neginja", email = "neginja@healthy.soup" }]
dependencies = [
    "fastapi>=0.135.1",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.22",
]

[project.license]
text = "Apache-2.0"

[dependency-groups]
dev = [
    "openapi-generator-cli==7.14.0",
    "httpx",
    "ruff",
    "uvicorn>=0.41.0",
]
deploy = [
    "gunicorn==25.1.0",
    "uvicorn>=0.41.0",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
reportAny = "hint"
reportExplicitAny = "hint"
reportImplicitStringConcatenation = "hint"
reportUnknownArgumentType = "hint"
reportUnusedFunction = "hint"
reportUnusedParameter = "hint"
